@@ -12,11 +12,31 @@
     <h1>Einstellungen</h1>
     <ul>
         <li><a href="#can_devices">CAN-Geräte</a></li>
-        <li><a href="#loco_images">Lokbilder</a></li>
+        <li><a href="#loco_icons">Lokbilder</a></li>
         <li><a href="#server_settings">Server-Einstellungen</a></li>
     </ul>
     <h2 id="can_devices">CAN-Geräte</h2>
-    <h2 id="loco_images">Lokbilder</h2>
-    <h2 id="server_settings">Server-Einstellungen</h2>
+    <p>Hier können alle über den CAN-Bus angebundenen und erkannten Geräte eingesehen und konfiguriert werden. Unter anderem können z.B. die Verbrauchswerte der Gleisbox betractet werden.</p>
+    <p>Über das Dropdown-Menü können die erkannten Geräte ausgewählt werden. Anschließend werden alle vom Gerät übertragenen Informationen dargestellt.</p>
+    
+    <h2 id="loco_icons">Lokbilder</h2>
+    <h3>Hochladen:</h3>
+    <p>Über diese Option lassen sich Bilder von dem benutzen Gerät auf dem Server hochgeladen werden.</p>
+    <h3>Download:</h3>
+    <p>Alternativ können Bilder unter angabe des Links direkt aus dem Internet herunter geladen werden.</p>
+    <p>Hinweis: Aktuell können die Bilder noch nicht über die Benutzeroberfläche einer Lok zugewiesen werden. Dieses Feature ist noch in der entwickung.</p>
+
+
+    <h2 id="server_settings">Server-Einstellungen:</h2>
+    <p>In dieser Sektion können einige allgemeine Einstellungen des Servers verändert werden.</p>
+    <h3>Server Neustarten:</h3>
+    <p>Der Server wird heruntergefahren und startet anschließend neu.</p>
+    <h3>Server Herunterfahren</h3>
+    <p>Der Server wird heruntergefahren und muss für eine erneute Verwendung manuell neu gestartet werden.</p>
+    <h3>Gleisprotokoll:</h3>
+    <p>Es können wahlweise die Protokolle Märklin Motorola, DCC und MFX bzw. M4 einzeln aktiviert oder deaktiviert werden.</p>
+    <h3>Neuanmeldezähler setzen:</h3>
+    <p>Der MFX-Neuanmeldezähler wird erhöt, um eine ggf. verloren gegangene Lok wieder zu finden. Sollte die Gleisspannung eingeschaltet sein, so wird diese für eine halbe Sekunde ausgeschaltet.</p>
+
 </body>
 </html>
