@@ -501,9 +501,12 @@ h1 .button {
 }
 
 #docs_container {
-    width: calc(100% - 50px);
-    height: calc( 100vh - 50px);
-    margin: 21px;
+	width: calc(100% - 50px);
+	max-height: 681px;
+	height: calc( 100vh - 50px);
+	max-width: 910px;
+	margin: auto;
+    margin-top: 21px;
 	border: 2px solid orange;
 	background-color: #fff6a6;
 	color: black;
