@@ -6,5 +6,5 @@
   "master": true,
   "server_path": "/www/MaeCAN-Server/",
   "ip": "localhost",
-  "version": "2018-06-27.1"
+  "version": "2018-06-28.2"
 }
